[gd_scene load_steps=14 format=3 uid="uid://cqtlv70nkglfp"]

[ext_resource type="Script" path="res://tutorial_1_memorize.gd" id="1_u16hx"]
[ext_resource type="PackedScene" uid="uid://hbrjciajmnpf" path="res://scrolling_background.tscn" id="51_2t2lw"]
[ext_resource type="PackedScene" uid="uid://bmba1pqq4wqxb" path="res://menu_icon.tscn" id="53_iti4d"]
[ext_resource type="Texture2D" uid="uid://b7e4ndhm2g66m" path="res://assets/sprites/menu_icon_background.png" id="54_c1fvn"]
[ext_resource type="Texture2D" uid="uid://cejxu0bh2fvbc" path="res://assets/sprites/menu_icon_foreground.png" id="55_mbmyl"]
[ext_resource type="PackedScene" uid="uid://cg0xtfp4bp48s" path="res://scale_and_sound.tscn" id="56_bf8rl"]
[ext_resource type="PackedScene" uid="uid://dfmg6das6l6cp" path="res://click_to_change_scene.tscn" id="59_mfeel"]
[ext_resource type="PackedScene" uid="uid://bx5qekwsln2yr" path="res://palette_listener.tscn" id="61_572qf"]
[ext_resource type="PackedScene" uid="uid://c6tacpe7tp1de" path="res://animated_button.tscn" id="62_ojrmd"]
[ext_resource type="PackedScene" uid="uid://d1q80rolx3cja" path="res://zones.tscn" id="63_hq0gp"]
[ext_resource type="PackedScene" uid="uid://dftsvelpx2cta" path="res://fade_transition.tscn" id="64_vcmij"]
[ext_resource type="PackedScene" uid="uid://cwhy67donfiqv" path="res://shaker.tscn" id="65_bbgw1"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ypwvg"]
random_pitch = 1.5

[node name="Tutorial_1_memorize" type="Node2D"]
script = ExtResource("1_u16hx")
metadata/_edit_horizontal_guides_ = [620.0]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ScrollingBackground" parent="Background" instance=ExtResource("51_2t2lw")]

[node name="MenuCanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="MarginContainer" parent="MenuCanvasLayer"]
unique_name_in_owner = true
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MenuCanvasLayer/Menu"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="Control2" type="Control" parent="MenuCanvasLayer/Menu/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MenuButton" parent="MenuCanvasLayer/Menu/HBoxContainer/Control2" instance=ExtResource("53_iti4d")]
unique_name_in_owner = true
self_modulate = Color(0.0823529, 0.380392, 0.427451, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -37.5
offset_right = 184.5
offset_bottom = 174.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_pressed = ExtResource("54_c1fvn")
texture_hover = ExtResource("54_c1fvn")
texture_disabled = ExtResource("54_c1fvn")
texture_focused = ExtResource("54_c1fvn")
background_texture = ExtResource("54_c1fvn")
foreground_texture = ExtResource("55_mbmyl")

[node name="ScaleAndSound2" parent="MenuCanvasLayer/Menu/HBoxContainer/Control2/MenuButton" instance=ExtResource("56_bf8rl")]

[node name="Control" type="Control" parent="MenuCanvasLayer/Menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="PickMeCanvasLayer" parent="." instance=ExtResource("59_mfeel")]
unique_name_in_owner = true
layer = 5

[node name="MarginContainer" type="MarginContainer" parent="PickMeCanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PickMeCanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="Control" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="LabelMemorize" type="Label" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.556863, 0.235294, 1)
theme_override_colors/font_outline_color = Color(0.945098, 0.945098, 0.901961, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 40
text = "Memorize"
horizontal_alignment = 1

[node name="PaletteListener" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/LabelMemorize" instance=ExtResource("61_572qf")]

[node name="Control3" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="CardDisplay" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
mouse_filter = 2

[node name="Control2" type="Control" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Explanation" type="VBoxContainer" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/Explanation"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.556863, 0.235294, 1)
theme_override_colors/font_outline_color = Color(0.945098, 0.945098, 0.901961, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 40
text = "Find Me!"
horizontal_alignment = 1

[node name="PaletteListener" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/Explanation/Label" instance=ExtResource("61_572qf")]

[node name="Label2" type="Label" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/Explanation"]
layout_mode = 2
theme_override_colors/font_color = Color(0.945098, 0.945098, 0.901961, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 20
text = "And drag me to
the bottom of
the screen"
horizontal_alignment = 1

[node name="PaletteListener" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/Explanation/Label2" instance=ExtResource("61_572qf")]
background_color = 1
background_hover_color = 0
foreground_color = 3

[node name="LetsGoButton" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/Explanation" instance=ExtResource("62_ojrmd")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Let's go!"

[node name="BackToMenu" type="Button" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 0.780392, 0.964706, 1)
theme_override_colors/font_hover_color = Color(0, 0.780392, 0.964706, 1)
theme_override_colors/font_pressed_color = Color(0, 0.780392, 0.964706, 1)
theme_override_colors/font_focus_color = Color(0, 0.780392, 0.964706, 1)
theme_override_colors/font_color = Color(0.513726, 0.156863, 0, 1)
theme_override_colors/font_outline_color = Color(0.945098, 0.945098, 0.901961, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 20
text = "Back"
flat = true
alignment = 0
autowrap_mode = 2

[node name="PaletteListener" parent="PickMeCanvasLayer/MarginContainer/VBoxContainer/BackToMenu" instance=ExtResource("61_572qf")]

[node name="Zones" parent="." instance=ExtResource("63_hq0gp")]
unique_name_in_owner = true

[node name="Cards" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_ypwvg")
bus = &"SFX"

[node name="FadeTransition" type="CanvasLayer" parent="."]
layer = 100

[node name="FadeTransition" parent="FadeTransition" instance=ExtResource("64_vcmij")]
unique_name_in_owner = true
visible = false

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.15
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CameraShaker" parent="Camera2D" instance=ExtResource("65_bbgw1")]
unique_name_in_owner = true
randomStrength = 10.0
